--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-        <title>My shaandaar todolist</title>
+        <title>Schedule</title>
         <style>
             a {
                 text-decoration: none;
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>Github Code is automatically running through jenkins Due to webhook.</h1>
+        <h1>Write your daily routine here</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
